# oopforge

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.ja.md  README.ko.md  README.md  README.zh.md  bootstrap.sh  doctor.sh  install.sh  uninstall.sh
.claude-plugin/: README.md  plugin.json
.codex-plugin/: README.md  plugin.json
.cursor-plugin/: README.md  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  new-skill.md
.github/workflows/: arch-lint.yml  domain-review.yml  examples.yml  lint.yml
.opencode/: README.md
agents/: ddd-architect.md  domain-reviewer.md
app/domain/: sample.py
commands/: craft.md  delivery-plan.md  design.md  discovery.md  implement.md  refactor.md  route.md  skeleton.md  test.md
docs/: claude-code.md  codex.md  cursor.md  methodology.ko.md  opencode.md  positioning.md  reviewer-checklist.md  roadmap.md
docs/proof/: README.md  result-template.md
docs/release/: v0.1.0-notes.md  v0.1.0.md  v0.2.2-notes.md  v0.2.2.md
docs/sample-output/: design-library.ja.md  design-library.ko.md  design-library.md  design-library.zh.md  design-order.md  discovery-library.ja.md  discovery-library.ko.md  discovery-library.md  discovery-library.zh.md  discovery-order.md
examples/: README.md
examples/calculator-java-hexagonal-cqrs/: README.md  (+2 more)
examples/calculator-python-hexagonal-cqrs/: README.md  pyproject.toml
examples/calculator-python-hexagonal-cqrs/app/: main.py
examples/calculator-python-hexagonal-cqrs/app/application/command/: calculate_command_service.py
examples/calculator-python-hexagonal-cqrs/app/application/query/: history_query_repository.py  history_query_service.py  history_summary.py
examples/calculator-python-hexagonal-cqrs/app/core/: dependencies.py
examples/calculator-python-hexagonal-cqrs/app/domain/calculation/: repository.py  value.py
examples/calculator-python-hexagonal-cqrs/app/infrastructure/repositories/: in_memory_calculation_repository.py  in_memory_history_query_repository.py  store.py
examples/calculator-python-hexagonal-cqrs/app/presentation/api/: command_router.py  query_router.py  schemas.py
examples/calculator-python-hexagonal-cqrs/tests/: test_api.py  test_command_service.py  test_domain.py  test_query_service.py
examples/order-python/: README.md  pyproject.toml
examples/order-python-flask/: README.md  pyproject.toml
examples/order-python-flask/app/: __init__.py
examples/order-python-flask/app/core/: dependencies.py
examples/order-python-flask/app/order/: blueprint.py  schemas.py  service.py
examples/order-python-flask/tests/: conftest.py  test_domain.py  test_openapi.py  test_service.py
examples/order-python-layered/: README.md  pyproject.toml
examples/order-python-layered/app/: main.py
examples/order-python-layered/app/order/: domain.py  repository.py  router.py  schemas.py  service.py
examples/order-python-layered/tests/: test_openapi.py  test_service.py
examples/order-python/app/: main.py
examples/order-python/app/application/services/order/: place_order_service.py
examples/order-python/app/domain/order/: model.py  repository.py  value.py
examples/order-python/app/infrastructure/repositories/order/: in_memory_order_repository.py
examples/order-python/app/presentation/api/order/: order_router.py  request.py
examples/order-python/tests/application/: test_place_order_service.py
examples/order-python/tests/domain/: test_order.py
scripts/: lint-skills.sh  path-convention.md  smoke-test.sh
skills/: SKILL.md
(+219 files in other folders)
