[project]
name = "order-python-flask-example"
version = "0.2.1"
description = "OOPforge reference: Flask 3-tier layered place-order"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-smorest>=0.45.0",
    "marshmallow>=3.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
